--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,15 @@ html {
     box-sizing: inherit;
 }
 
+::selection {
+    background-color: yellow;
+}
+
+/*Castoms properties*/
+:root {
+    --bg-color-container:#FFFFFF;
+}
+
 @font-face {
     font-family: 'Muller';
     src: local('Muller-Bold'),
@@ -47,8 +56,26 @@ html {
 }
 
 a {
+    display: block;
     color:inherit;
     text-decoration: none;
+    width: fit-content;
+    transition-property: border, color;
+    transition-duration: 250ms;
+    transition-timing-function:ease-in-outcubic-bezier(0.6, 0.04, 0.98, 0.335);
+}
+
+a:focus {
+    border: 1px solid #CC9933;
+    color: #CC9933;
+}
+
+a:hover {
+    color: #E9C379;
+}
+
+a:active {
+    color: #A47312;
 }
 
 p {
@@ -96,6 +123,22 @@ button {
     border-radius: 10px;
     cursor: pointer;
     background-color: #FFFFFF;
+    transition-property: background-color, color;
+    transition-duration: 250ms;
+    transition-timing-function:ease-in-out;
+}
+
+.btn:focus {
+    background: #CC9933;
+    color: #FFFFFF;
+}
+
+.btn:hover {
+    background: #CC9933;
+}
+
+.btn:active {
+    background: #A47312;
 }
 
 .flex {
@@ -110,15 +153,28 @@ button {
 
 .section-title {
     margin: 0px;
+    margin-left: 40px;
     margin-bottom: 20px;
+    width: fit-content;
     font-size: 40px;
     line-height: 40px;
     color: #333333;
-    padding-left: 40px;
+    transition-property: border, color;
+    transition-duration: 250ms;
+    transition-timing-function:cubic-bezier(0.755, 0.05, 0.855, 0.06);
 }
 
-.section-offset:not(:last-child) {
-    margin-bottom: 70px;
+.section-title:focus {
+    border: 1px solid #CC9933;
+    box-sizing: border-box;
+}
+
+.section-title:hover {
+    color: #CC9933;
+}
+
+.section-title:active {
+    color: #A47312;
 }
 
 .section-offset:last-child {
@@ -132,7 +188,8 @@ button {
 }
 
 .header-logo {
-    margin-right: 30px;
+    width: 261px;
+    margin-right: 40px;
 }
 
 .header-container-first,
@@ -149,8 +206,20 @@ button {
     color: #666666;
 }
 
+.header-phone:focus {
+    border: 1px solid #CC9933;
+    box-sizing: border-box;
+}
+
+.header-phone:hover {
+    color: #CC9933;
+}
+
+.header-phone:active {
+    color: #A47312;
+}
+
 .header-arrow {
-    display: block;
     font-size: 16px;
     line-height: 16px;
     color: #CC9933;
@@ -160,11 +229,27 @@ button {
     padding-left: 28px;
 }
 
+.header-arrow:focus {
+    background-image: url(../img/Vector-focus.png);
+    border: 1px solid #CC9933;
+}
+
+.header-arrow:hover {
+    background-image: url(../img/Vector-hover.png);
+    color: #E9C479;
+    
+}
+
+.header-arrow:active {
+    background-image: url(../img/Vector-active.png);
+    color: #A47312;
+}
+
 .header-container-second {
     width: 1170px;
     min-height: 70px;
     border-radius: 15px;
-    background-color: #FFFFFF;
+    background-color: var(--bg-color-container);
     align-items: center;
 }
 
@@ -184,7 +269,6 @@ button {
     color: #666666;
 }
 
-
 .header-list-item:not(:last-child) {
     margin-right: 45px;
 }
@@ -194,6 +278,10 @@ button {
 }
 
 /*main - exclusive*/
+
+.exclusive {
+    margin-bottom: 23px;
+}
 
 .exclusive-list {
     flex-wrap: wrap;
@@ -206,6 +294,7 @@ button {
 .exclusive-item {
     height: 258px;
     margin-right: 23px;
+    margin-bottom: 23px;
 }
 
 .exclusive-item-other {
@@ -218,12 +307,14 @@ button {
 }
 
 .exclusive-blog-preview {
+    position: relative;
     flex-direction: column;
     padding: 40px;
     min-width: 573px;
 }
 
 .exclusive-blog-preview-other {
+    position: relative;
     flex-direction: column;
     padding: 211px 40px 40px 40px;
     width: 573px;
@@ -293,13 +384,59 @@ button {
     background-position: right;
 }
 
+.exclusive-item-link::before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.exclusive-item-link-other::before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.exclusive-blog-preview:focus,
+.exclusive-blog-preview-other:focus {
+    background: #2A2836;
+    border-radius: 15px;
+}
+
+.exclusive-blog-preview:hover,
+.exclusive-blog-preview-other:hover {
+    background: #2A2836;
+    border-radius: 15px;
+}
+
+.exclusive-blog-preview:active,
+.exclusive-blog-preview-other:active {
+    background: #2A2836;
+    border-radius: 15px;
+}
+
 /*main - about_us*/
+
+.about_us {
+    margin-bottom: 47px;
+}
 
 .about_us-description {
     max-width: 888px;
 }
 
 /*main - service*/
+
+.service {
+    margin-bottom: 47px;
+}
 
 .service-list {
     flex-wrap: wrap;
@@ -310,17 +447,25 @@ button {
     max-width: 571px;
 }
 
-.service-item:nth-child(3),
-.service-item:nth-child(4) {
-    margin-bottom: 0;
-}
-
 .service-item:not(:nth-child(2n)) {
     margin-right: 23px;
 }
 
+.service-blog-preview {
+    position: relative;
+}
+
 .service-item-link {
     font-weight: 500px;
+}
+
+.service-item-link::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    bottom: 0;
 }
 
 .service-artical-title {
@@ -333,20 +478,24 @@ button {
     background-image: url(../img/Arrow\ \(2\).svg);
     background-repeat: no-repeat;
     background-position:right;
-
 }
 
 .service-item-icon {
     border-radius: 15px 15px 0 0;
 }
 
+.service-item-icon:hover {
+    background: #2A2736;
+    border-radius: 15px 15px 0px 0px;
+}
+
 .service-information {
     padding: 26px 10px 50px 45px;
-    background: #FFFFFF;
+    background: var(--bg-color-container);
     border-radius: 0px 0px 15px 15px;
 }
 
-.service-item-discription {
+.service-item-icon-discription {
     font-size: 16px;
     line-height: 200%;
     color: #000000;
@@ -354,6 +503,10 @@ button {
 }
 
 /*main - benefits*/
+
+.benefits {
+    margin-bottom: 47px;
+}
 
 .benefits-list {
     flex-wrap: wrap;
@@ -363,15 +516,8 @@ button {
     max-width: 275px;
     padding: 40px 42px 41px 45px;
     margin-bottom: 23px;
-    background: #FFFFFF;
+    background: var(--bg-color-container);
     border-radius: 15px;
-}
-
-.benefits-item:nth-child(5),
-.benefits-item:nth-child(6),
-.benefits-item:nth-child(7),
-.benefits-item:nth-child(8) {
-    margin-bottom: 0;
 }
 
 .benefits-item:not(:nth-child(4n)) {
@@ -379,6 +525,10 @@ button {
 }
 
 /*main-location*/
+
+.location {
+    margin-bottom: 47px;
+} 
 
 .location-list {
     flex-wrap: wrap;
@@ -393,12 +543,6 @@ button {
     margin-right: 23px;
 }
 
-.location-item:nth-child(7),
-.location-item:nth-child(8),
-.location-item:nth-child(9) {
-    margin-bottom:0px;
-}
-
 .location-blog {
     margin: 0px;
 }
@@ -409,7 +553,7 @@ button {
 
 .location-information {
     padding: 36px 46px 41px 45px;
-    background: #FFFFFF;
+    background: var(--bg-color-container);
     border-radius: 0 0 15px 15px;
 }
 
@@ -449,12 +593,28 @@ button {
 
 .last-blog {
     min-width: 373px;
+    min-height: 440px;
     background-image: url(../img/9.Location.jpg);
     background-repeat: no-repeat;
     justify-content: center;
     align-items: flex-end;
     border-radius: 15px;
     padding-bottom: 27px;
+}
+
+.last-blog {
+    position: relative;
+}
+
+.location-item-link::before {
+    content:'';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+
 }
 
 .location-item-link {
@@ -468,7 +628,27 @@ button {
     padding-right: 15px;
 }
 
+.location-item-link:focus {
+    background-image: url(../img/Arrow\ \(2\).svg);
+    border: 1px solid #CC9933;
+    color: #CC9933;
+}
+
+.location-item-link:hover {
+    background-image: url(../img/Arrow\ \(2\).svg);
+    color: #E9C379;
+}
+
+.location-item-link:active {
+    color: #A47312;
+}
+
 /*blog*/
+
+.blog {
+    margin-bottom: 70px;
+}
+
 .container-blog {
     width: 1170px;
     background: #E9E9E9;
@@ -488,7 +668,7 @@ button {
 }
 
 .blog-form {
-    background: #FFFFFF;
+    background: var(--bg-color-container);
     border-radius: 15px;
     justify-content: space-around;
     align-items: center;
@@ -523,7 +703,7 @@ input {
 /*contact*/
 
 .container-contacts {
-    background: #FFFFFF;
+    background: var(--bg-color-container);
     border-radius: 15px;
     justify-content: space-between;
     padding: 44px 44px 46px 46px;
@@ -569,12 +749,12 @@ input {
 }
 
 .contacts-item-tel-link {
-    display: block;
     font-size: 16px;
     line-height: 150%;
     color: #CC9933;
     font-style: normal;
     font-weight: normal;
+    height: fit-content;
 }
 
 .contacts-item-email {
@@ -587,6 +767,7 @@ input {
     font-size: 16px;
     line-height: 20px;
     color: #CC9933;
+    width: fit-content
 }
 
 .contacts-item-text_transparent {
@@ -606,13 +787,28 @@ input {
     width: 230px;
 }
 
-.contacts-btm {
+.contacts-btn {
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
     line-height: 16px;
     color: #CC9933;
     padding: 27px 20px;
+}
+
+.contacts-btn:focus {
+    background: #CC9933;
+    color: #FFFFFF;
+}
+
+.contacts-btn:hover {
+    background: #CC9933;
+    color: #FFFFFF;
+}
+
+.contacts-btn:active {
+    background: #A47312;
+    color: #FFFFFF;
 }
 
 /*footer*/
@@ -680,6 +876,33 @@ input {
 
 .social-icon:not(:last-child) {
     padding-bottom: 20px;
+}
+
+.social-icon-tripadvisor:focus,
+.social-icon-twitter:focus,
+.social-icon-fb:focus,
+.social-icon-vk:focus,
+.social-icon-inst:focus {
+    background: #CC9933;
+    border-radius: 11px;
+}
+
+.social-icon-tripadvisor:hover,
+.social-icon-twitter:hover,
+.social-icon-fb:hover,
+.social-icon-vk:hover,
+.social-icon-inst:hover {
+    background: #CC9933;
+    border-radius: 11px;
+}
+
+.social-icon-tripadvisor:active,
+.social-icon-twitter:active,
+.social-icon-fb:active,
+.social-icon-vk:active,
+.social-icon-inst:active {
+    background: #A47312;
+    border-radius: 11px;
 }
 
 .frame-san {
